# bitcoin-state-scraper

./: .gitignore  docker-compose.yaml  main.py  makefile  model.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  schedule.ts  test_craw.py
config/: __init__.py  environment.py
migrations/: 001_add_btc_and_usd_count.py
utils/: __init__.py  message.py  utils.py
