[tool.poetry]
name = "bitcoin-scraper"
version = "0.1.0"
description = ""
authors = ["joeAtl <joe.chen@atlancube.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
pytz = "2023.3.post1"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
